--- a/belanja.html
+++ b/belanja.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="style2.css">
 </head>
 <body>
+  
+<nav>
+  <ul>
+    <li>seller </li>
+    <li>mulai berjualan </li>
+    <li>dowload</li>
+  </ul>
+</nav>
 
 <div class="container">
   <div class="iklan">
@@ -30,67 +38,51 @@
   <img src="shope3.jpeg" alt="">
 </div>
 </div>
-    
-  <div class="container">
-    <div class="card">
-      
-<img src="mdm.jpeg" alt="1">
-  <p>500.000</p>
-      <h3>knalpot</h3>
-      <button>BUY</button>
-    </div>
-
-    <div class="card">
-      <img src="intake.jpeg" alt="Kartun 2">
-      <p>500.000</p>
-      <h3>intake</h3>
-      <button>BUY</button>
-  </div>
-
-    <div class="card">
-      <img src="karbu pe.jpeg" alt="Kartun 3">
-      <p>200.000</p>
-      <h3>karbu</h3>
-      <button>BUY</button>
-    </div>
-
-    <div class="card">
-      <img src="tb.jpeg" alt="Kartun 4">
-      <p>800.000</p>
-      <h3>tb</h3>
-      <button>BUY</button>
-    </div>
-
-    <div class="card">
-      <img src="arm.jpeg" alt="Kartun 5">
-      <p>800.000</p>
-      <h3>arm</h3>
-      <button>BUY</button>
-    </div>
-
-    <div class="card">
-      <img src="vnd.jpeg" alt="Kartun 6">
-      <p>2.000.000</p>
-      <h3>veleg</h3>
-      <button>BUY</button>
-    </div>
-
-    <div class="card">
-      <img src="aes.jpeg" alt="Kartun 7">
-      <p>1.500.000</p>
-      <h3>biled</h3>
-      <button>BUY</button>
-    </div>
-
-    <div class="card">
-      <img src="titan.jpeg" alt="Kartun 8">
-      <p>500.000</p>
-      <h3>baud</h3>
-      <button>BUY</button>
-    </div>
-
- 
-
+  
+<div class="container">
+  <div class="card">
+    <img src="arm.jpeg" alt="">
+    <h2>arm</h2>
+    <h3>800.000</h3>
 </div>
+  <div class="card">
+    <img src="karbu pe.jpeg" alt="">
+    <h2>karbu pe</h2>
+    <h3>400.000</h3>
+</div>
+  <div class="card">
+    <img src="titan.jpeg" alt="">
+    <h2>titanium</h2>
+    <h3>1.000.000</h3>
+</div>
+  <div class="card">
+    <img src="vnd.jpeg" alt="">
+    <h2>vleg</h2>
+    <h3>2.000.000</h3>
+</div>
+</div>
+<div class="container">
+  <div class="card">
+    <img src="mdm.jpeg" alt="">
+    <h2>knalpot</h2>
+    <h3>750.000</h3>
+</div>
+  <div class="card">
+    <img src="intake.jpeg" alt="">
+    <h2>donraf</h2>
+    <h3>500.000</h3>
+</div>
+  <div class="card">
+    <img src="tb.jpeg" alt="">
+    <h2>trotol body</h2>
+    <h3>1.000.000</h3>
+</div>
+  <div class="card">
+    <img src="aes.jpeg" alt="">
+    <h2>biled</h2>
+    <h3>1.000.000</h3>
+  </div>
+</div>
+  
 </body>
 </html>
